@@ -32,6 +32,12 @@
 
 package org.opensearch.geo;
 
+import org.opensearch.geo.search.aggregations.bucket.composite.GeoTileGridValuesSourceBuilder;
+import org.opensearch.geo.search.aggregations.bucket.geogrid.GeoHashGridAggregationBuilder;
+import org.opensearch.geo.search.aggregations.bucket.geogrid.GeoTileGridAggregationBuilder;
+import org.opensearch.geo.search.aggregations.bucket.geogrid.GeoTileGridAggregator;
+import org.opensearch.geo.search.aggregations.bucket.geogrid.InternalGeoHashGrid;
+import org.opensearch.geo.search.aggregations.bucket.geogrid.InternalGeoTileGrid;
 import org.opensearch.geo.search.aggregations.metrics.GeoBounds;
 import org.opensearch.geo.search.aggregations.metrics.GeoBoundsAggregationBuilder;
 import org.opensearch.geo.search.aggregations.metrics.InternalGeoBounds;
@@ -40,6 +46,7 @@ import org.opensearch.index.mapper.Mapper;
 import org.opensearch.plugins.MapperPlugin;
 import org.opensearch.plugins.Plugin;
 import org.opensearch.plugins.SearchPlugin;
+import org.opensearch.search.aggregations.bucket.composite.CompositeAggregation;
 
 import java.util.Collections;
 import java.util.List;
@@ -57,11 +64,42 @@ public class GeoModulePlugin extends Plugin implements MapperPlugin, SearchPlugi
      */
     @Override
     public List<AggregationSpec> getAggregations() {
-        final AggregationSpec spec = new AggregationSpec(
+        final AggregationSpec geoBounds = new AggregationSpec(
             GeoBoundsAggregationBuilder.NAME,
             GeoBoundsAggregationBuilder::new,
             GeoBoundsAggregationBuilder.PARSER
         ).addResultReader(InternalGeoBounds::new).setAggregatorRegistrar(GeoBoundsAggregationBuilder::registerAggregators);
-        return Collections.singletonList(spec);
+
+        final AggregationSpec geoHashGrid = new AggregationSpec(
+            GeoHashGridAggregationBuilder.NAME,
+            GeoHashGridAggregationBuilder::new,
+            GeoHashGridAggregationBuilder.PARSER
+        ).addResultReader(InternalGeoHashGrid::new).setAggregatorRegistrar(GeoHashGridAggregationBuilder::registerAggregators);
+
+        final AggregationSpec geoTileGrid = new AggregationSpec(
+            GeoTileGridAggregationBuilder.NAME,
+            GeoTileGridAggregationBuilder::new,
+            GeoTileGridAggregationBuilder.PARSER
+        ).addResultReader(InternalGeoTileGrid::new).setAggregatorRegistrar(GeoTileGridAggregationBuilder::registerAggregators);
+        return List.of(geoBounds, geoHashGrid, geoTileGrid);
+    }
+
+    /**
+     * Registering the {@link GeoTileGridAggregator} in the {@link CompositeAggregation}.
+     *
+     * @return a {@link List} of {@link CompositeAggregationSpec}
+     */
+    @Override
+    public List<CompositeAggregationSpec> getCompositeAggregations() {
+        return Collections.singletonList(
+            new CompositeAggregationSpec(
+                GeoTileGridValuesSourceBuilder::register,
+                GeoTileGridValuesSourceBuilder.class,
+                GeoTileGridValuesSourceBuilder.COMPOSITE_AGGREGATION_SERIALISATION_BYTE_CODE,
+                GeoTileGridValuesSourceBuilder::new,
+                GeoTileGridValuesSourceBuilder::parse,
+                GeoTileGridValuesSourceBuilder.TYPE
+            )
+        );
     }
 }
